# Ascend_YOLO_Track

./: .gitignore  CMakeLists.txt  README.md  bytetrack.cpp  run_compile.sh  video_infer.sh
include/: STrack.h  label.h  yolov8.h
src/: yolov8.cpp
